# Decrust

./: .cirrus.yml  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Decrust.md  LICENSE  README.md  checkthiout.txt  cratecheck.py  decrust.txt  rust-toolchain.toml  thistoo.txt
.github/: copilot-instructions.md  copilot-rust-error-handling-instructions.md
.github/workflows/: ci.yml  ci_backup.yml  ci_fixed.yml  release-please.yml  release.yml
decrust/: Cargo.toml  temp_config.toml
decrust-core/: Cargo.toml
decrust-core/decrust-crates/: Cargo.toml
decrust-core/decrust-crates/src/: main.rs
decrust-core/decrust-crates/tests/: basic_tests.rs  end_to_end_tests.rs  performance_tests.rs  test_fixtures.rs  unit_tests.rs
decrust-core/decrust-promac/: Cargo.toml
decrust-core/decrust-promac-runtime/: Cargo.toml
decrust-core/decrust-promac-runtime/src/: lib.rs
decrust-core/decrust-promac-runtime/tests/: test_reexports.rs
decrust-core/decrust-promac/src/: lib.rs
decrust-core/decrust-promac/tests/: test_autocorrection.rs  test_circuit_breaker.rs  test_decrust_derive.rs  test_decrust_enhance.rs  test_decrust_macro.rs  test_fix_generators_part1.rs  test_fix_generators_part2.rs  test_fix_generators_part3.rs  test_fix_generators_part4.rs  test_fix_generators_part5.rs  test_reporter.rs  test_syntax.rs  test_types.rs  tri_protocol_tests.rs
decrust-core/src/: backtrace.rs  circuit_breaker.rs  decrust.rs  lib.rs  reporter.rs  src.txt  syntax.rs  types.rs
decrust-core/tests/: backtrace_tests.rs  circuit_breaker_tests.rs  fixer_tests.rs  lib_tests.rs  reporter_tests.rs  syntax_tests.rs  types_tests.rs
decrust-promac/: Cargo.toml
decrust-promac-runtime/: Cargo.toml
decrust-promac-runtime/src/: lib.rs
decrust-promac-runtime/tests/: test_reexports.rs
decrust-promac/src/: lib.rs
decrust-promac/tests/: test_autocorrection.rs  test_circuit_breaker.rs  test_decrust_derive.rs  test_decrust_enhance.rs  test_decrust_macro.rs  test_fix_generators_part1.rs  test_fix_generators_part1.rs.backup_20250524_033556  test_fix_generators_part2.rs  test_fix_generators_part2.rs.backup_20250524_033556  test_fix_generators_part3.rs  test_fix_generators_part3.rs.backup_20250524_033556  test_fix_generators_part4.rs  test_fix_generators_part4.rs.backup_20250524_033556  test_fix_generators_part5.rs  test_fix_generators_part5.rs.backup_20250524_033556  test_reporter.rs  test_reporter.rs.backup_20250524_033556  test_syntax.rs  test_types.rs  tri_protocol_tests.rs  tri_protocol_tests.rs.backup_20250524_033556
decrust/examples/: any-operation.rs  simple_test.rs
decrust/src/: lib.rs
decrust/tests/: any_operation.rs
examples/: advanced_usage.rs  basic_usage.rs  basic_usage.rs.backup_20250524_033556  error_usage.rs  macro_usage.rs  ultimate_vision.rs
scripts/: check-ci.bat  check-ci.sh
src/: backtrace.rs  circuit_breaker.rs  decrust.rs  lib.rs  reporter.rs  syntax.rs  types.rs
tests/: backtrace_tests.rs  circuit_breaker_tests.rs  fixer_tests.rs  lib_tests.rs  reporter_tests.rs  syntax_tests.rs  types_tests.rs
