# Workspace configuration for the decrust project
# The Ultimate Error Handling Framework for Rust

[workspace]
members = [
"decrust",                             # The ultimate public interface
"decrust-core",                        # Core framework (renamed from decrust)
"decrust-core/decrust-promac",         # Procedural macro implementation (inside decrust-core)
"decrust-core/decrust-promac-runtime"] # Runtime middleware (inside decrust-core)
resolver = "2"

# Workspace-wide dependencies that can be inherited by members
[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
syn = { version = "2.0.101", features = ["full"] }
thiserror = "1.0.48"
anyhow = "1.0.75"
regex = "1.11.1"
tracing = "0.1.37"
derivative = "2.2.0"
proc-macro2 = "1.0"
quote = "1.0.40"
rand = "0.8"

# Workspace-wide metadata
[workspace.package]
version = "1.2.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/decrust"
license = "MIT"
description = "The ultimate all-in-one error handling framework for Rust"

# Workspace-wide lints
[workspace.lints.clippy]
# Allow large error types - this is intentional for comprehensive error handling
result_large_err = "allow"

# The workspace only manages members, the actual decrust package is in decrust/

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# Examples are defined in the individual crates
