# The Ultimate Decrust Interface - All-in-One Error Handling
[package]
name = "decrust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "The ultimate all-in-one error handling framework for Rust - use decrust::* and decrust!(any_operation())"

[dependencies]
# Re-export the core framework
decrust-core = { path = "../decrust-core", version = "0.1.1" }

# Re-export the macro (now inside decrust-core)
decrust_promac = { path = "../decrust-core/decrust-promac", version = "0.1.1" }

# Re-export the runtime (now inside decrust-core)
decrust-promac-runtime = { path = "../decrust-core/decrust-promac-runtime", version = "0.1.1" }

[lib]
name = "decrust"
path = "src/lib.rs"
doctest = true
test = true

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
proptest = "1.0"

# Examples to showcase the ultimate interface
[[example]]
name = "any-operation"
path = "examples/any-operation.rs"
