# Decrust Crates Dependency Optimizer
[package]
name = "decrust-crates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Comprehensive dependency analyzer and optimizer for Rust projects - part of the Decrust framework"

[[bin]]
name = "decrates"
path = "src/main.rs"

[dependencies]
# Core decrust functionality
decrust-core = { path = ".." }

# Workspace dependencies
syn = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }


# Additional dependencies for the optimizer
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
toml = "0.8.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[lints]
workspace = true
